
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander
- GL   Guillaume Lelarge

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-10-30 DP  1.8.1  When creating a new index and specifying both tablespace
                      and fill factor, make sure the SQL is formulated 
                      correctly, per Stefan Wolf
2007-10-29 DP  1.8.1  Fix the locks tab on the server status dialogue so it
                      works correctly with PostgreSQL 8.3+.
2007-10-29 DP  1.8.1  Properly format the object comments shown in the
                      properties list when a collection node is selected. Per
                      report from Mike Blackwell.
2007-10-29 DP  1.8.1  Fix a bug preventing the 'on error' flag of a pgAgent job
                      step being edited, per Jon Roberts.
2007-10-26 DP  1.10.0 Handle the corner case when a user includes quotes in an
                      object name.
2007-10-26 MH  1.10.0 Add a 'Blocked By' column to the Server Status dialog
                      to show if a transaction is blocked by another process.
2007-10-26 DP  1.8.1  Properly escape _'s in queries for schemas, per Derek
                      Fonda.
2007-10-26 DP  1.8.1  Don't try to enable/disable prepared transaction related
                      controls on pre-8.1 servers, per Karl Zellnig
2007-10-12 DP  1.8.0  Avoid using a correlated subquery that Greenplum doesn't
                      support, per report from Jon Roberts.
2007-09-24 DP  1.8.0  Allow GUCs to be set on functions in PostgreSQL 8.3 and
                      above. [Guillaume Lelarge]
2007-09-24 DP  1.8.0  Allow GUCs to be set on users, roles and databases at
                      create time.
2007-09-03 DP  1.8.0  Fix the table, index and index constraint tablespace